--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <section class="hero">
         <div class="hero__overlay">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
-          <button class="hero__button" type="button" data-modal-open>Замовити послугу</button>
+          <button type="button" class="hero__button" type="button" data-modal-open>Замовити послугу</button>
         </div>
       </section>
 
