--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <section class="hero">
         <div class="hero__overlay">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
-          <button type="button" class="hero__button" type="button" data-modal-open>Замовити послугу</button>
+          <button type="button" class="hero__button" type="button" aria-label="Замовити послугу" data-modal-open>Замовити послугу</button>
         </div>
       </section>
 
@@ -140,25 +140,25 @@
                 <p class="team__meta--position">Product Designer</p>
                 <ul class="team__icons-list">
                   <li>
-                    <a href="#" class="round-icon"
+                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer" aria-label="instagram"
                       ><svg class="icon" width="20" height="20">
                         <use href="./images/icons.svg#instagram"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a href="#" class="round-icon"
+                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer" aria-label="twitter"
                       ><svg class="icon" width="20" height="20">
                         <use href="./images/icons.svg#twitter"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a href="#" class="round-icon"
+                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer" aria-label="facebook"
                       ><svg class="icon" width="20" height="20">
                         <use href="./images/icons.svg#facebook"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a href="#" class="round-icon"
+                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer" aria-label="linkedin"
                       ><svg class="icon" width="20" height="20">
                         <use href="./images/icons.svg#linkedin"></use></svg
                     ></a>
@@ -177,25 +177,25 @@
                 <p class="team__meta--position">Frontend Developer</p>
                 <ul class="team__icons-list">
                   <li>
-                    <a href="#" class="round-icon"
+                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer" aria-label="instagram"
                       ><svg class="icon" width="20" height="20">
                         <use href="./images/icons.svg#instagram"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a href="#" class="round-icon"
+                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer" aria-label="twitter"
                       ><svg class="icon" width="20" height="20">
                         <use href="./images/icons.svg#twitter"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a href="#" class="round-icon"
+                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer" aria-label="facebook"
                       ><svg class="icon" width="20" height="20">
                         <use href="./images/icons.svg#facebook"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a href="#" class="round-icon"
+                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer" aria-label="linkedin"
                       ><svg class="icon" width="20" height="20">
                         <use href="./images/icons.svg#linkedin"></use></svg
                     ></a>
@@ -214,25 +214,25 @@
                 <p class="team__meta--position">Marketing</p>
                 <ul class="team__icons-list">
                   <li>
-                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer"
+                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer" aria-label="instagram"
                       ><svg class="icon" width="20" height="20">
                         <use href="./images/icons.svg#instagram"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer"
+                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer" aria-label="twitter"
                       ><svg class="icon" width="20" height="20">
                         <use href="./images/icons.svg#twitter"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer"
+                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer" aria-label="facebook"
                       ><svg class="icon" width="20" height="20">
                         <use href="./images/icons.svg#facebook"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer"
+                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer" aria-label="linkedin"
                       ><svg class="icon" width="20" height="20">
                         <use href="./images/icons.svg#linkedin"></use></svg
                     ></a>
@@ -257,25 +257,25 @@
                 <p class="team__meta--position">UI Designer</p>
                 <ul class="team__icons-list">
                   <li>
-                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer"
+                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer" aria-label="instagram"
                       ><svg class="icon" width="20" height="20">
                         <use href="./images/icons.svg#instagram"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer"
+                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer" aria-label="twitter"
                       ><svg class="icon" width="20" height="20">
                         <use href="./images/icons.svg#twitter"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer"
+                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer" aria-label="facebook"
                       ><svg class="icon" width="20" height="20">
                         <use href="./images/icons.svg#facebook"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer"
+                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer" aria-label="linkedin"
                       ><svg class="icon" width="20" height="20">
                         <use href="./images/icons.svg#linkedin"></use></svg
                     ></a>
@@ -293,37 +293,37 @@
           <h2 class="clients__title">Постійні клієнти</h2>
           <ul class="clients__list">
             <li class="clients__item">
-              <a href="#" class="bordered-icon" target="_blank" rel="noopener noreferrer"
+              <a href="#" class="bordered-icon" target="_blank" rel="noopener noreferrer" aria-label="client1"
                 ><svg class="icon" width="106" height="60">
                   <use href="./images/icons.svg#client1"></use></svg
               ></a>
             </li>
             <li class="clients__item">
-              <a href="#" class="bordered-icon" target="_blank" rel="noopener noreferrer"
+              <a href="#" class="bordered-icon" target="_blank" rel="noopener noreferrer" aria-label="client2"
                 ><svg class="icon" width="106" height="60">
                   <use href="./images/icons.svg#client2"></use></svg
               ></a>
             </li>
             <li class="clients__item">
-              <a href="#" class="bordered-icon" target="_blank" rel="noopener noreferrer"
+              <a href="#" class="bordered-icon" target="_blank" rel="noopener noreferrer" aria-label="client3"
                 ><svg class="icon" width="106" height="60">
                   <use href="./images/icons.svg#client3"></use></svg
               ></a>
             </li>
             <li class="clients__item">
-              <a href="#" class="bordered-icon" target="_blank" rel="noopener noreferrer"
+              <a href="#" class="bordered-icon" target="_blank" rel="noopener noreferrer" aria-label="client4"
                 ><svg class="icon" width="106" height="60">
                   <use href="./images/icons.svg#client4"></use></svg
               ></a>
             </li>
             <li class="clients__item">
-              <a href="#" class="bordered-icon" target="_blank" rel="noopener noreferrer"
+              <a href="#" class="bordered-icon" target="_blank" rel="noopener noreferrer" aria-label="client5"
                 ><svg class="icon" width="106" height="60">
                   <use href="./images/icons.svg#client5"></use></svg
               ></a>
             </li>
             <li class="clients__item">
-              <a href="#" class="bordered-icon" target="_blank" rel="noopener noreferrer"
+              <a href="#" class="bordered-icon" target="_blank" rel="noopener noreferrer" aria-label="client6"
                 ><svg class="icon" width="106" height="60">
                   <use href="./images/icons.svg#client6"></use></svg
               ></a>
@@ -358,25 +358,25 @@
           <h3 class="social__title">Приєднуйтесь</h3>
           <ul class="social__list">
             <li class="social__item">
-              <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer"
+              <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer" aria-label="instagram"
                 ><svg class="icon" width="20" height="20">
                   <use href="./images/icons.svg#instagram"></use></svg
               ></a>
             </li>
             <li class="social__item">
-              <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer"
+              <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer" aria-label="twitter"
                 ><svg class="icon" width="20" height="20">
                   <use href="./images/icons.svg#twitter"></use></svg
               ></a>
             </li>
             <li class="social__item">
-              <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer"
+              <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer" aria-label="facebook"
                 ><svg class="icon" width="20" height="20">
                   <use href="./images/icons.svg#facebook"></use></svg
               ></a>
             </li>
             <li class="social__item">
-              <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer"
+              <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer" aria-label="linkedin"
                 ><svg class="icon" width="20" height="20">
                   <use href="./images/icons.svg#linkedin"></use></svg
               ></a>
