--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <div class="page-header__container">
         <a class="logo" href="./index.html"><span class="logo--accent">Web</span>Studio</a>
         <nav>
-          <button type="button" class="navigation__button" aria-expanded="false">
-            <svg class="navigation__button--icon" width="40" height="40" aria-label="Перемикач мобільного меню">
+          <button type="button" class="navigation__button" aria-expanded="false" aria-label="Перемикач мобільного меню">
+            <svg class="navigation__button--icon" width="40" height="40">
               <use class="navigation__button--icon-close" href="./images/icons.svg#nav-close"></use>
               <use class="navigation__button--icon-open" href="./images/icons.svg#nav-open"></use>
             </svg>
@@ -401,7 +401,7 @@
     <!-- MODAL -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="modal__close-button" data-modal-close>
+        <button class="modal__close-button" aria-label="Закрити модальне вікно" data-modal-close>
           <svg class="modal__close-button-icon" width="30" height="30">
             <use href="./images/icons.svg#close"></use>
           </svg>
@@ -445,7 +445,7 @@
             </li>
           </ul>
 
-          <button type="submit" class="modal__button">Відправити</button>
+          <button type="submit" class="modal__button" aria-label="Відправити форму">Відправити</button>
         </form>
       </div>
     </div>
